[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/Spider.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Enemies/spider.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Enemies/spider_walk1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Enemies/spider_walk2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Enemies/spider_dead.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.0444
height = 20.9226

[sub_resource type="CapsuleShape2D" id=3]
radius = 22.327
height = 29.8289

[sub_resource type="CapsuleShape2D" id=4]
radius = 32.0
height = 437.269

[node name="Spider" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.89158 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 2.72409 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="DetectingBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectingBox"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="GroundCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -26.9577, 0.156731 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="GroundCheckRight" type="RayCast2D" parent="."]
position = Vector2( 25.8606, 0.313461 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="WallCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -10.6577, -0.156731 )
enabled = true
cast_to = Vector2( -25, 0 )

[node name="WallCheckRight" type="RayCast2D" parent="."]
position = Vector2( 9.7173, 0 )
enabled = true
cast_to = Vector2( 25, 0 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="DetectingBox" to="." method="_on_DetectingBox_body_entered"]
[connection signal="body_exited" from="DetectingBox" to="." method="_on_DetectingBox_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
